fix wrap

--- a/src/styles/sms.scss
+++ b/src/styles/sms.scss
@@ -34,6 +34,7 @@
   line-height: 34px;
   color: #fff;
   font-size: 18px;
+  white-space: nowrap;
 }
 
 .error {
@@ -105,7 +106,7 @@
 }
 
 .button {
-  margin-top: 20px;
+  margin-top: 10px;
   width: 100%;
   background-color: #ffa500;
   border-radius: 20px;
